Minor changes, probably fixed a major sidebar bug where the sidebar would close prematurely

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<button class="menu-buttons" onclick="window.location.href='http://fcps.edu/'">FCPS Home</button>
 			<button class="menu-buttons" onclick="window.location.href='https://tjhsst.edu/'">TJHSST Home</button>
 			<button class="menu-buttons" onclick="window.location.href='https://webmail.tjhsst.edu/'">TJHSST Webmail</button>
-			<button class="menu-buttons" onclick="window.location.href='https://ion.tjhsst.edu/'">Intranet3</button>	
+			<button class="menu-buttons" onclick="window.location.href='https://ion.tjhsst.edu/'">Ion</button>	
 		</div>
 	</div>
     <div id="wrapper">
