--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>TJHSST Network Shares</title>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<link rel="icon" type="image/ico" href=""/>
+<link rel="icon" type="image/ico" href="resources/images/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="resources/styles/main.css">
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
